gcc/testsuite/g++.dg/template/operator6.C
// PR c++/27315
// { dg-do compile }

template void operator+; // { dg-error "non-function" }
